# yet-another-wordle-project

./: .gitignore  CMakeLists.txt  README.md
data/: best_starting_guesses.txt  difficult_wordlist.txt  shuffled_real_wordles.txt
src/: Guess.h  LetterColour.cpp  LetterColour.h  Solver.cpp  Solver.h  WordColour.cpp  WordColour.h  Wordle.h  main.cpp
test/: CMakeLists.txt  Solver_Test.cpp
